store exit code into table. (#29)
* update

* fix windows test failed

* update

* add test

* update error handler

* update windows test

* add test cov for xctx
